--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build", 
+    "build": "npm run build",
+    "install-client": "npm install",
     "start": "node server.js"
   },
   "author": "",
@@ -19,6 +18,5 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0"
-  },
-  "proxy": "http:://localhost:8080"
+  }
 }
